WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158469
TouchList::append() should take a Ref instead of RefPtr
https://bugs.webkit.org/show_bug.cgi?id=158469
Summary
TouchList::append() should take a Ref instead of RefPtr
Nael Ouedraogo
Reported
2016-06-07 02:40:14 PDT
TouchList::append() should take a Ref instead of RefPtr. Follow-up of
bug 158302
and
bug 157985
.
Attachments
Patch
(2.79 KB, patch)
2016-06-07 06:00 PDT
,
Nael Ouedraogo
no flags
Details
Formatted Diff
Diff
Patch
(2.84 KB, patch)
2016-06-07 08:12 PDT
,
Nael Ouedraogo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nael Ouedraogo
Comment 1
2016-06-07 06:00:54 PDT
Created
attachment 280701
[details]
Patch
Nael Ouedraogo
Comment 2
2016-06-07 08:12:07 PDT
Created
attachment 280708
[details]
Patch
Chris Dumez
Comment 3
2016-06-07 08:57:36 PDT
Comment on
attachment 280708
[details]
Patch R=me
WebKit Commit Bot
Comment 4
2016-06-07 23:09:53 PDT
Comment on
attachment 280708
[details]
Patch Clearing flags on attachment: 280708 Committed
r201793
: <
http://trac.webkit.org/changeset/201793
>
WebKit Commit Bot
Comment 5
2016-06-07 23:09:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug