TouchList::append() should take a Ref instead of RefPtr https://bugs.webkit.org/show_bug.cgi?id=158469

Reviewed by Chris Dumez.

RefPtr<Touch> items handled in TouchList cannot be null. Thus
RefPtr<Touch> is replaced by Ref<Touch> objects.

* bindings/js/JSDocumentCustom.cpp:
(WebCore::JSDocument::createTouchList):
* dom/TouchList.cpp:
(WebCore::TouchList::item):
* dom/TouchList.h:
(WebCore::TouchList::append):


Canonical link: https://commits.webkit.org/176576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201793 268f45cc-cd09-0410-ab3c-d52691b4dbfc